<resources>
    <string name="app_name">DogApp</string>
    <string name="title_activity_login">DogApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sintomas">"Sintomas"</string>
    <string name="editar_cita">Editar Cita</string>
    <string name="desc_btn_back">Botón para volver</string>
    <string name="nombre_mascota">Nombre de la Mascota</string>
    <string name="raza">Raza</string>
    <string name="nombre_propietario">Nombre del Propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar_cita">Guardar Cita</string>
    <string name="bot_n_volver">Botón volver</string>
    <string name="nueva_cita">Nueva Cita</string>
    <string name="turno">Turno</string>
    <string name="DetalleImgPerro">Imagen de la mascota</string>
    <string name="selecciona_sintoma">Selecciona un síntoma</string>
    <string name="cita_guardada">La cita se guardó correctamente</string>
    <string name="error_cargar_razas">No se pudo cargar la lista de razas</string>
</resources>