<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/desc_btn_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="#F05861"
            tools:ignore="ImageContrastCheck,UseAppTint" />

        <TextView
            android:id="@+id/TitleEditarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_cita"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Campos del formulario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombreMascota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_mascota"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRaza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/raza"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/layoutNombreMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp">

        <AutoCompleteTextView
            android:id="@+id/etRaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="LabelFor,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombrePropietario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_propietario"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/layoutRaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombrePropietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="30"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/layoutTelefono"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/telefono"
    app:boxBackgroundMode="filled"
    app:boxStrokeColor="#800080"
    app:boxStrokeWidthFocused="2dp"
    app:layout_constraintTop_toBottomOf="@id/layoutNombrePropietario"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="12dp"
    android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,VisualLintTextFieldSize" />
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/editar_cita"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:backgroundTint="#F05861"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
